Revert "add overflow:hidden to avoid long login names to overflow" Oops, this breaks the menu...
This reverts commit ac9719ccf262341a5185d422dfa43d3318f0ad37.

--- a/web/css/menu.css
+++ b/web/css/menu.css
@@ -33,7 +33,6 @@
 	height: auto;
 	max-width: 12em;
 	overflow: visible;
-	overflow: hidden;
 }
 #nav ul ul {
 	width: 8em;
